--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,138 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
+
+li {
+  cursor: pointer;
+}
+
+ul {
+  list-style-type: none;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+/* 
+
+DARK-MODE
+
+*/
+
+body.dark {
+  background-color: black;
+}
+
+.dark .nav__link {
+  color: white;
+}
+
+/* 
+
+NAV
+
+*/
+
+.App {
+  min-height: 300vh;
+  min-width: 100vw;
+}
+
+.nav__container {
+  filter: blur(1.3);
+}
+
+nav {
+  width: 100%;
+  margin: 0 auto;
+  max-width: 1300px;
+
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 16px;
+}
+
+.nav__logo {
+  height: 60px;
+}
+
+.nav__links {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  z-index: 0;
+}
+
+.nav__link {
+  position: relative;
+  padding: 8px 10px;
+  margin: 8px;
+}
+
+.selected {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  border-radius: 12px;
+  z-index: -1;
+}
+
+/* SWITCH */
+
+.switch {
+  width: 100px;
+  height: 50px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  border-radius: 50px;
+  padding: 10px;
+  cursor: pointer;
+  border: 1px solid black;
+}
+
+.switch[data-ison='true'] {
+  justify-content: flex-end;
+  background-color: white;
+}
+
+.handle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: black;
+  border-radius: 40px;
+  background-position: center;
+}
+
+.handle[data-ison='true'] {
+  background-color: black;
+}
+
+.sun--yellow {
+  color: yellow;
+}
+
+.moon--white {
+  color: white;
+}
+
+@media (max-width: 650px) {
+  .nav__link {
+    display: none;
+  }
 }
