--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,19 @@ body {
   overflow-x: hidden;
 }
 
+.container {
+  padding: 0 32px;
+  padding-top: 80px;
+  min-height: 300vh;
+  background-color: lightcoral;
+}
+
+.row {
+  max-width: 1300px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 /* 
 
 DARK-MODE
@@ -29,10 +42,6 @@ body.dark {
   background-color: black;
 }
 
-.dark .nav__link {
-  color: white;
-}
-
 /* 
 
 NAV
@@ -40,14 +49,14 @@ NAV
 */
 
 .App {
-  min-height: 300vh;
-  min-width: 100vw;
 }
 
 .nav__container {
   position: fixed;
   width: 100%;
-  background-color: green;
+  background-color: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  image-rendering: pixelated;
 }
 
 nav {
@@ -64,6 +73,7 @@ nav {
 
 .nav__logo {
   height: 60px;
+  user-select: none;
 }
 
 .nav__links {
@@ -71,12 +81,23 @@ nav {
   align-items: center;
   font-size: 18px;
   z-index: 0;
+  user-select: none;
 }
 
 .nav__link {
+  color: white;
   position: relative;
   padding: 8px 10px;
   margin: 8px;
+  text-decoration: none;
+}
+
+.nav__link:hover {
+  color: yellow;
+}
+
+.nav__link.active > p {
+  color: yellow;
 }
 
 .selected {
@@ -93,36 +114,37 @@ nav {
 /* SWITCH */
 
 .switch {
-  width: 100px;
-  height: 50px;
+  width: 60px;
+  height: 30px;
   background-color: white;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   border-radius: 50px;
-  padding: 10px;
+  padding: 5px;
   cursor: pointer;
   border: 1px solid black;
+  margin-left: 8px;
 }
 
 .switch[data-ison='true'] {
   justify-content: flex-end;
-  background-color: white;
+  background-color: black;
 }
 
 .handle {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  width: 20px;
+  height: 20px;
   background-color: black;
   border-radius: 40px;
   background-position: center;
 }
 
 .handle[data-ison='true'] {
-  background-color: black;
+  background-color: white;
 }
 
 .sun--yellow {
@@ -130,11 +152,55 @@ nav {
 }
 
 .moon--white {
+  color: blue;
+}
+
+/* 
+
+Modal
+
+*/
+
+.modal__button {
+  display: none;
+  margin-left: 16px;
+}
+
+/* 
+
+Home
+
+*/
+
+.background-image {
+  min-width: 100vw;
+  max-height: 100vh;
+  object-fit: cover;
+}
+
+/* 
+
+Footer
+
+*/
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+}
+
+.footer__description {
+  padding: 2.5rem 0;
   color: white;
 }
 
-@media (max-width: 650px) {
+@media (max-width: 800px) {
   .nav__link {
     display: none;
+  }
+  .modal__button {
+    display: block;
   }
 }
