--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,7 @@ NAV
   background-color: rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
   image-rendering: pixelated;
+  z-index: 999;
 }
 
 nav {
@@ -176,6 +177,16 @@ Home
   min-width: 100vw;
   max-height: 100vh;
   object-fit: cover;
+}
+
+/* 
+
+Resume
+
+*/
+
+.rpv-core__inner-page {
+  background-color: transparent;
 }
 
 /* 
