--- a/src/App.css
+++ b/src/App.css
@@ -198,6 +198,47 @@ Resume
 
 /* 
 
+Modal
+
+*/
+
+.modal__container {
+  position: absolute;
+  top: 80px;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 300px;
+  height: 100vh;
+  background-color: lightblue;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+
+.modal__links {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal__link {
+  text-decoration: none;
+  margin-top: 32px;
+  color: white;
+  font-size: 32px;
+}
+
+/* 
+
 Footer
 
 */
