added basic layout for all pages

--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,6 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-html {
-  overflow-y: scroll;
-}
-
 li {
   cursor: pointer;
 }
@@ -21,13 +17,13 @@ ul {
 
 body {
   overflow-x: hidden;
+  background-color: lightcoral;
 }
 
 .container {
   padding: 0 32px;
   padding-top: 80px;
   min-height: 300vh;
-  background-color: lightcoral;
 }
 
 .row {
@@ -211,20 +207,51 @@ Home
   justify-content: center;
 }
 
-.home__title {
-}
-
 /* 
 
 Resume
 
 */
 
+.parallax--wrapper {
+  overflow: hidden;
+  position: relative;
+  min-height: 40vh;
+  min-width: 100vw;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.parallax-background-image--wrapper {
+  position: absolute;
+  top: -100px;
+  left: -100px;
+  right: -100px;
+  bottom: -100px;
+}
+
+.parallax-background-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+
+  z-index: -1;
+}
+
+.parallax__info--wrapper {
+  z-index: 100;
+}
+
 .resume__container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+.resume__title {
 }
 
 .rpv-core__inner-page {
