--- a/src/App.css
+++ b/src/App.css
@@ -17,11 +17,12 @@ ul {
 
 html {
   overflow-y: scroll;
+  scroll-behavior: smooth;
 }
 
 body {
   overflow-x: hidden;
-  background-color: lightcoral;
+  background-color: rgb(229, 236, 236);
 }
 
 .container {
@@ -71,7 +72,7 @@ DARK-MODE
 */
 
 body.dark {
-  background-color: lightcoral;
+  /* background-color: lightcoral; */
 }
 
 /* 
@@ -126,11 +127,11 @@ nav {
 }
 
 .nav__link:hover {
-  color: yellow;
+  color: lightblue;
 }
 
 .nav__link.active > p {
-  color: yellow;
+  color: lightblue;
 }
 
 .selected {
@@ -139,7 +140,7 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: red;
+  background-color: gray;
   border-radius: 12px;
   z-index: -1;
 }
