--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,18 @@ body {
   margin: 0 auto;
 }
 
+.app--loader {
+  position: absolute;
+  /* background-color: white; */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* LOADER */
 
 .loader--wrapper {
@@ -73,6 +85,10 @@ DARK-MODE
 
 body.dark {
   /* background-color: lightcoral; */
+}
+
+body.dark .app--loader {
+  background-color: #111;
 }
 
 body.dark .home__title,
@@ -403,5 +419,6 @@ footer {
   }
   .home__description {
     inline-size: min-content;
+    font-size: 60px;
   }
 }
