completed remade site to have live navigation

--- a/src/App.css
+++ b/src/App.css
@@ -291,6 +291,14 @@ Home
   color: #111;
 }
 
+.secret {
+  position: absolute;
+  height: 3px;
+  width: 3px;
+  top: 80px;
+  left: 0;
+}
+
 /* 
 
 About
