--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body {
 }
 
 .container {
-  padding: 0 32px;
+  margin: 100px 32px;
   min-height: 100vh;
 }
 
@@ -261,7 +261,8 @@ About
 .about__title {
   font-size: 100px;
   font-weight: 500;
-  margin: 200px 0;
+  padding-top: 150px;
+  padding-bottom: 250px;
 }
 
 .about__para {
