--- a/src/App.css
+++ b/src/App.css
@@ -294,7 +294,6 @@ Home
 
 .about__title,
 .projects__title,
-.contact__title,
 .resume__title {
   padding: 200px 0;
   font-weight: 500;
@@ -493,12 +492,141 @@ Contact
 
 */
 
+.contact__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.contact__title {
+  padding-top: 200px;
+  margin-bottom: 24px;
+  font-weight: 500;
+  font-size: 100px;
+  color: #111;
+}
+
+.contact__para--description {
+  z-index: 100;
+  background-color: white;
+  margin-bottom: 100px;
+  max-width: 460px;
+  line-height: 1.5;
+}
+
 .contact-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 8px;
+  padding: 40px;
+  max-width: 450px;
+  width: 100%;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border-radius: 20px;
+  margin-bottom: 100px;
+}
+
+.contact__label {
+  color: black;
+  font-weight: 500;
+  width: 100%;
+}
+
+.contact__input {
+  line-height: 1.5;
+}
+
+.contact__input,
+.contact__textarea {
+  border: 2px solid #a4a4a4;
+  outline: none;
+  border-radius: 4px;
+  padding: 10px 4px 10px 40px;
+  width: 100%;
+}
+
+.contact__textarea {
+  resize: none;
+  min-height: 200px;
+}
+
+.contact__input:focus,
+.contact__textarea:focus {
+  background-color: #f9f9fb;
+  border: 2px solid rgb(51, 185, 222);
+}
+
+.contact__error-message {
+  width: 100%;
+  font-size: 0.9rem;
+  color: red;
+}
+
+.contact__icon {
+  color: #7a7a7a;
+}
+
+.contact-input--wrapper {
+  width: 100%;
+  position: relative;
+}
+
+.contact__input:focus + .contact__icon {
+  color: rgb(51, 185, 222);
+}
+
+.contact__icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.contact__icon--textarea {
+  top: 20px;
+}
+
+.submitBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background-color: #33b9de;
+  color: white;
+  padding: 8px 12px;
+  border-radius: 8px;
+  min-width: 73.34px;
+  box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.2);
+  transition: box-shadow 200ms;
+}
+
+.submitBtn:hover {
+  filter: brightness(0.9);
+}
+
+.submitBtn:active {
+  box-shadow: 0 1px 3px hsla(0, 0%, 0%, 0.2);
+}
+
+.toast {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+  background-color: white;
+  width: 200px;
+  height: 50px;
+  border-radius: 8px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
 /* 
@@ -575,6 +703,144 @@ footer {
   transform: translateX(16px);
   opacity: 1;
 }
+
+/* LOADER */
+.chaotic-orbit {
+  --uib-size: 16px;
+  --uib-speed: 1.5s;
+  --uib-color: white;
+
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: var(--uib-size);
+  width: var(--uib-size);
+  animation: rotate calc(var(--uib-speed) * 1.667) infinite linear;
+}
+
+.chaotic-orbit::before,
+.chaotic-orbit::after {
+  content: '';
+  position: absolute;
+  height: 60%;
+  width: 60%;
+  border-radius: 50%;
+  background-color: var(--uib-color);
+  will-change: transform;
+  flex-shrink: 0;
+}
+
+.chaotic-orbit::before {
+  animation: orbit var(--uib-speed) linear infinite;
+}
+
+.chaotic-orbit::after {
+  animation: orbit var(--uib-speed) linear calc(var(--uib-speed) / -2) infinite;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes orbit {
+  0% {
+    transform: translate(calc(var(--uib-size) * 0.5)) scale(0.73684);
+    opacity: 0.65;
+  }
+  5% {
+    transform: translate(calc(var(--uib-size) * 0.4)) scale(0.684208);
+    opacity: 0.58;
+  }
+  10% {
+    transform: translate(calc(var(--uib-size) * 0.3)) scale(0.631576);
+    opacity: 0.51;
+  }
+  15% {
+    transform: translate(calc(var(--uib-size) * 0.2)) scale(0.578944);
+    opacity: 0.44;
+  }
+  20% {
+    transform: translate(calc(var(--uib-size) * 0.1)) scale(0.526312);
+    opacity: 0.37;
+  }
+  25% {
+    transform: translate(0%) scale(0.47368);
+    opacity: 0.3;
+  }
+  30% {
+    transform: translate(calc(var(--uib-size) * -0.1)) scale(0.526312);
+    opacity: 0.37;
+  }
+  35% {
+    transform: translate(calc(var(--uib-size) * -0.2)) scale(0.578944);
+    opacity: 0.44;
+  }
+  40% {
+    transform: translate(calc(var(--uib-size) * -0.3)) scale(0.631576);
+    opacity: 0.51;
+  }
+  45% {
+    transform: translate(calc(var(--uib-size) * -0.4)) scale(0.684208);
+    opacity: 0.58;
+  }
+  50% {
+    transform: translate(calc(var(--uib-size) * -0.5)) scale(0.73684);
+    opacity: 0.65;
+  }
+  55% {
+    transform: translate(calc(var(--uib-size) * -0.4)) scale(0.789472);
+    opacity: 0.72;
+  }
+  60% {
+    transform: translate(calc(var(--uib-size) * -0.3)) scale(0.842104);
+    opacity: 0.79;
+  }
+  65% {
+    transform: translate(calc(var(--uib-size) * -0.2)) scale(0.894736);
+    opacity: 0.86;
+  }
+  70% {
+    transform: translate(calc(var(--uib-size) * -0.1)) scale(0.947368);
+    opacity: 0.93;
+  }
+  75% {
+    transform: translate(0%) scale(1);
+    opacity: 1;
+  }
+  80% {
+    transform: translate(calc(var(--uib-size) * 0.1)) scale(0.947368);
+    opacity: 0.93;
+  }
+  85% {
+    transform: translate(calc(var(--uib-size) * 0.2)) scale(0.894736);
+    opacity: 0.86;
+  }
+  90% {
+    transform: translate(calc(var(--uib-size) * 0.3)) scale(0.842104);
+    opacity: 0.79;
+  }
+  95% {
+    transform: translate(calc(var(--uib-size) * 0.4)) scale(0.789472);
+    opacity: 0.72;
+  }
+  100% {
+    transform: translate(calc(var(--uib-size) * 0.5)) scale(0.73684);
+    opacity: 0.65;
+  }
+}
+
+/* 
+
+MEDIA QUERIES 
+
+*/
 
 @media (max-width: 900px) {
   .nav__link {
