added more boilerplate for projects

--- a/src/App.css
+++ b/src/App.css
@@ -381,7 +381,7 @@ Projects
   display: grid;
   width: 100%;
   order: 0;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px; */
 }
 
 .project:hover .project__img {
