--- a/src/App.css
+++ b/src/App.css
@@ -300,7 +300,6 @@ Home
   color: #111;
 }
 
-.about__title,
 .projects__title,
 .resume__title {
   padding-top: 200px;
@@ -328,6 +327,15 @@ Home
 About
 
 */
+
+.about__title {
+  padding-top: 200px;
+  margin-bottom: 100px;
+  font-weight: 500;
+  font-size: 100px;
+  color: #111;
+  overflow: hidden;
+}
 
 .about__para {
   font-size: 2rem;
@@ -623,7 +631,7 @@ Contact
 }
 
 .contact__title {
-  padding-top: 200px;
+  padding-top: 100px;
   margin-bottom: 24px;
   font-weight: 500;
   font-size: 100px;
