--- a/src/App.css
+++ b/src/App.css
@@ -395,7 +395,6 @@ Projects
 }
 
 .project {
-  position: relative;
   border-radius: 12px;
   overflow: hidden;
   width: 100%;
@@ -407,6 +406,7 @@ Projects
 }
 
 .project__img--wrapper {
+  position: relative;
   overflow: hidden;
   font-size: 0;
   line-height: 0;
@@ -424,7 +424,7 @@ Projects
 .project__languages--wrapper {
   pointer-events: none;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   gap: 8px;
   align-items: center;
   z-index: 1000;
@@ -440,7 +440,7 @@ Projects
   font-size: 0.8rem;
   background-color: #111;
   color: white;
-  padding: 4px 8px;
+  padding: 8px;
   border-radius: 50px;
 }
 
@@ -474,10 +474,13 @@ Projects
   font-size: 1.3rem;
   padding: 8px 16px;
   border-radius: 8px;
+  min-width: 129.22px;
+  text-align: center;
 }
 
 .projectsBtn--black {
   background-color: rgb(51, 51, 51);
+  min-width: 163.63px;
 }
 
 .project__title {
@@ -975,6 +978,12 @@ MEDIA QUERIES
 
 */
 
+@media (max-width: 1400px) {
+  .project-buttons--wrapper {
+    flex-direction: column;
+  }
+}
+
 @media (max-width: 900px) {
   .nav__link {
     display: none;
@@ -996,6 +1005,9 @@ MEDIA QUERIES
   .project__img--wrapper,
   .project__info {
     width: 100%;
+  }
+  .project-buttons--wrapper {
+    flex-direction: row;
   }
 }
 
@@ -1019,5 +1031,8 @@ MEDIA QUERIES
   }
   .contact-form {
     padding: 40px;
+  }
+  .project-buttons--wrapper {
+    flex-direction: column;
   }
 }
