fix: color of textarea in contact page not changing on focus

--- a/src/App.css
+++ b/src/App.css
@@ -680,7 +680,8 @@ Contact
   position: relative;
 }
 
-.contact__input:focus + .contact__icon {
+.contact__input:focus + .contact__icon,
+.contact__textarea:focus + .contact__icon {
   color: rgb(51, 185, 222);
 }
 
