--- a/src/App.css
+++ b/src/App.css
@@ -195,7 +195,9 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #33b9de;
+  background-color: #14809c;
+  filter: contrast(2);
+  /* background-color: #33b9de; */
   border-radius: 12px;
   z-index: -1;
 }
@@ -703,7 +705,8 @@ Contact
   cursor: pointer;
   border: none;
   outline: none;
-  background-color: #33b9de;
+  background-color: #14809c;
+  filter: contrast(2);
   color: white;
   padding: 8px 12px;
   border-radius: 8px;
